clean code 3.0 refactor ArcaneAssembler fix a few bugs